Bug 162695 - UI: comment indicator in Draw/Impress has grown in size, sometimes overlapping shapes and such
Summary: UI: comment indicator in Draw/Impress has grown in size, sometimes overlappin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-08-29 15:33 UTC by Telesto
Modified: 2025-12-01 08:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (9.21 KB, application/vnd.oasis.opendocument.graphics)
2024-08-29 15:34 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-08-29 15:33:54 UTC
Description:
UI: comment indicator in Draw/Impress has grown in size, sometimes overlapping shapes and such

Steps to Reproduce:
1. Open the attached file


Actual Results:
The blue box behind the comment is hidden with Master, visible with 24.2

Expected Results:
A little smaller? Or some solution for the backwards compatibility? Objects are hidden by the new size


Reproducible: Always


User Profile Reset: No

Additional Info:
Larger with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c52f139b4f7140033144dde29f70a39ebedb6aa0
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: threaded

Fine with
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 898d5d470e24a55556f2fb244fec24df33ba8855
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2024-08-29 15:34:06 UTC
Created attachment 196100 [details]
Sample
Comment 2 Buovjaga 2024-08-30 07:35:05 UTC
Looks like the change was b547e9f19de339531709c14931998125b9a41649
tdf#161911 annot: fix for annotation with 0 size

In the example file, there is a small rectangle shape behind comment 1.
Comment 3 Commit Notification 2025-01-03 14:59:22 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e70afe758eae3acdc5ac6ee2b3d173985899db1a

tdf#162695 decrease the text margins to smaller

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2025-01-03 15:23:53 UTC
I verify they are smaller now.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e70afe758eae3acdc5ac6ee2b3d173985899db1a
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 3 January 2025
Comment 5 Commit Notification 2025-01-03 19:15:44 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d8a36f40462eb3eba81d50b5df142a8ca5ca8aaf

tdf#162695 decrease the text margins to smaller

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Belle Trantow 2025-09-08 07:11:03 UTC Comment hidden (spam)
Comment 7 citybrawl 2025-12-01 08:10:18 UTC Comment hidden (spam)